<resources>
    <string name="app_name">CainCamera</string>

    <string name="btn_view_photo">查看照片</string>
    <string name="btn_take">拍摄</string>
    <string name="btn_switch_camera">切换镜头</string>
    <string name="btn_setting">设置</string>
    <string name="btn_back">返回</string>
    <string name="btn_more">更多</string>

    <!--顶部设置文字-->
    <string name="tv_flash">闪光灯</string>
    <string-array name="tv_face_mode">
        <item>单脸模式</item>
        <item>多脸模式</item>
    </string-array>
    <string-array name="tv_beautify">
        <item>美颜开启</item>
        <item>美颜关闭</item>
    </string-array>
    <string name="tv_time_lapse">延时拍摄</string>
    <string name="tv_auto_save">自动保存</string>
    <string name="tv_touch_take">触屏拍照</string>


    <!--底部文字-->
    <string name="tv_gif">表情包</string>
    <string name="tv_picture">拍照</string>
    <string name="tv_sticker">萌装照</string>
    <string name="tv_video">视频</string>

    <!--编辑图片-->
    <string name="brightness">亮度</string>
    <string name="contrast">对比度</string>
    <string name="exposure">曝光</string>
    <string name="hue">色调</string>
    <string name="saturation">饱和度</string>
    <string name="sharpness">锐度</string>

    <!--编辑视频-->
    <string name="back">返回</string>
    <string name="edit_title">编辑视频</string>
    <string name="next">下一步</string>
    <string name="filters">滤镜</string>
    <string name="edit">编辑</string>
    <string name="speed">加速</string>
    <string name="subtitle">字幕</string>
    <string name="cut">剪辑</string>
    <string name="graffiti">魔法涂鸦</string>
    <string name="hiphop">嘻哈特效</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="edit_title_speed">加速变声</string>
    <string name="edit_title_volume">调节音量</string>

    <!-- 编辑图片页面 -->
    <string name="image_edit_title">编辑图片</string>
    <string name="image_edit_beautify">一键美化</string>
    <string name="image_edit_filters">特效</string>
    <string name="image_edit_crop">裁剪旋转</string>
    <string name="image_edit_stickers">贴纸</string>
    <string name="image_edit_font">文字</string>
    <string name="image_edit_adjust">调节</string>
    <string name="image_edit_grafitti">涂鸦</string>
    <string name="image_edit_mosaic">马赛克</string>
    <string name="image_edit_edge">边框</string>
    <string name="image_edit_enhancement">夜景增强</string>
    <string name="image_edit_blur">虚化</string>
    <string name="image_edit_mat_blur">抠图虚化</string>

    <!-- 编辑操作 -->
    <string name="image_edit_cancel">取消</string>
    <string name="image_edit_apply">应用</string>

    <!-- 一键美化 -->
    <string name="image_edit_source">原片</string>
    <string name="image_edit_auto">自动</string>
    <string name="image_edit_food">食物</string>
    <string name="image_edit_object">静物</string>
    <string name="image_edit_screen">风景</string>
    <string name="image_edit_person">人物</string>

    <!-- 裁剪旋转 -->
    <string name="image_edit_rotate">旋转</string>
    <string name="image_edit_rotate90">旋转90°</string>
    <string name="image_edit_flip">镜像翻转</string>
    <string name="image_edit_custom">自由</string>
    <string name="image_edit_original">原始</string>
    <string name="image_edit_oneOne">1:1</string>
    <string name="image_edit_threeFour">3:4</string>
    <string name="image_edit_fourThree">4:3</string>
    <string name="image_edit_nineSixteen">9:16</string>
    <string name="image_edit_sixteenNine">16:9</string>

    <!-- 夜景增强 -->
    <string name="image_edit_intensity">强度</string>

    <string-array name="trackig_mode_array">
        <item>Normal</item>
        <item>Robust</item>
        <item>Fast</item>
    </string-array>

    <string-array name="gallery_indicator">
        <item>表情包</item>
        <item>拍照</item>
        <item>视频</item>
    </string-array>

    <!-- 首页按钮 -->
    <string name="btn_camera">滤镜相机</string>
    <string name="btn_video_record">使用FFmpeg录制视频</string>
    <string name="btn_edit">编辑图片/视频</string>
    <string name="btn_image_render">GPU渲染图片</string>
    <string name="btn_test">测试页面</string>

    <!-- 测试按钮 -->
    <string name="btn_muti">双HandlerThread线程渲染</string>
    <string name="btn_facepp">Face++关键点(使用GLSurfaceView)</string>
    <string name="btn_facepp2">Face++关键点(使用SurfaceView)</string>
    <string name="btn_push">RTMP推流</string>

    <!--合并视频提示-->
    <string name="combining">正在合并视频...</string>

    <!-- 调试描述 -->
    <string name="test_description">CainCamera目前采用单一HandlerThread 同时处理Camera相机流和渲染逻辑，请参考CameraActivity
        一条HandlerThread控制Camera，一条HandlerThread控制渲染的方式在相当大一部分部分MTK的CPU上onPreviewFrame回调时间过长。
        详情请参考CameraTesActivity里面的得到的测试结果</string>

    <string name="test_allright">项目地址：https://github.com/CainKernel/CainCamera </string>
</resources>
