<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_beautify"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background= "@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_beautify"  />

        <Button
            android:id="@+id/btn_filters"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_filters" />

        <Button
            android:id="@+id/btn_crop_rotate"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background= "@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_crop"/>

        <Button
            android:id="@+id/btn_stickers"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background= "@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_stickers"/>

        <Button
            android:id="@+id/btn_font"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_font"/>


        <Button
            android:id="@+id/btn_adjust"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background= "@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_adjust"/>

        <Button
            android:id="@+id/btn_grafitti"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_grafitti"/>

        <Button
            android:id="@+id/btn_mosaic"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_mosaic"/>

        <Button
            android:id="@+id/btn_edge"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_edge"/>

        <Button
            android:id="@+id/btn_enhancement"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_enhancement"/>

        <Button
            android:id="@+id/btn_blur"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_blur"/>

        <Button
            android:id="@+id/btn_mat_blur"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_mat_blur"/>

    </LinearLayout>

</HorizontalScrollView>