<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:minHeight="@dimen/dp50"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp60">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_rotate_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_rotate90"/>

            <Button
                android:id="@+id/btn_flip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_flip"/>

            <Button
                android:id="@+id/btn_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_custom"/>

            <Button
                android:id="@+id/btn_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_original"/>

            <Button
                android:id="@+id/btn_one_to_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_oneOne"/>

            <Button
                android:id="@+id/btn_three_to_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_threeFour"/>

            <Button
                android:id="@+id/btn_four_to_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_fourThree"/>

            <Button
                android:id="@+id/btn_nine_to_sixteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_nineSixteen"/>

            <Button
                android:id="@+id/btn_sixteen_to_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_sixteenNine"/>
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/image_edit_rotate"/>

        <SeekBar
            android:id="@+id/sb_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"/>
    </LinearLayout>
</RelativeLayout>