<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/video_window_background"
    tools:context="com.cgfay.caincamera.activity.ImageEditActivity">

    <!--顶部导航栏-->
    <include
        layout="@layout/view_edit_navigation" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_navigation" />

    <!-- 底部编辑功能选项 -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_beautify"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp50"
                android:background= "@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_beautify"  />

            <Button
                android:id="@+id/btn_filters"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp50"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_filters" />

            <Button
                android:id="@+id/btn_font"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp50"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_font"/>

            <Button
                android:id="@+id/btn_graffiti"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp50"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_graffiti"/>

            <Button
                android:id="@+id/btn_crop"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp50"
                android:background= "@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_crop"/>

            <Button
                android:id="@+id/btn_rotate"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp50"
                android:background= "@android:color/transparent"
                android:textColor="@android:color/white"
                android:text="@string/image_edit_rotate"/>

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>
