<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginStart="@dimen/dp30"
            android:minHeight="@dimen/dp30"
            android:minWidth="@dimen/dp30"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/video_focus"
            android:text="@string/speed"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:minHeight="@dimen/dp40"
            android:minWidth="@dimen/dp40"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/video_focus"
            android:text="@string/subtitle"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_cut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:minHeight="@dimen/dp40"
            android:minWidth="@dimen/dp40"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/video_focus"
            android:text="@string/cut"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_graffitti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:minHeight="@dimen/dp40"
            android:minWidth="@dimen/dp40"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/video_focus"
            android:text="@string/graffiti"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_hip_hop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp30"
            android:minHeight="@dimen/dp40"
            android:minWidth="@dimen/dp40"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/video_focus"
            android:text="@string/hiphop"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</HorizontalScrollView>