<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp40"
    android:layout_margin="@dimen/dp10"
    android:layout_gravity="top">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:minHeight="@dimen/dp40"
        android:minWidth="@dimen/dp50"
        android:textColor="@color/white"
        android:text="@string/back"/>

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/edit_title"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:minHeight="@dimen/dp40"
        android:minWidth="@dimen/dp50"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:text="@string/next"/>
</RelativeLayout>