<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.cgfay.caincamera.activity.PhotoViewActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 列表 -->
        <com.cgfay.utilslibrary.AsyncRecyclerview
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.cgfay.utilslibrary.AsyncRecyclerview>

        <!-- 图片预览编辑 -->
        <RelativeLayout
            android:id="@+id/layout_photo_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/layout_edit_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/layout_margin_height"
                android:layout_alignParentBottom="true">

                <SeekBar
                    android:id="@+id/edit_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/layout_edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_brightness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/edit_size"
                        android:text="@string/brightness"/>
                    <Button
                        android:id="@+id/btn_contrast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/edit_size"
                        android:text="@string/contrast"/>

                    <Button
                        android:id="@+id/btn_exposure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/edit_size"
                        android:text="@string/exposure" />

                    <Button
                        android:id="@+id/btn_hue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/edit_size"
                        android:text="@string/hue" />

                    <Button
                        android:id="@+id/btn_saturation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/edit_size"
                        android:text="@string/saturation"/>
                    <Button
                        android:id="@+id/btn_sharpness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/edit_size"
                        android:text="@string/sharpness"/>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/photo_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_above="@+id/layout_edit_bar"/>

        </RelativeLayout>
        <!--用于显示滤镜值-->
        <TextView
            android:id="@+id/show_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorValueShow"
            android:textSize="@dimen/show_value_size"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>